nesting folder for image in index and about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,14 +16,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="nav1" id="mynav1">
         <a href="index.html" class="active"><img src="spw1.png" height="40" id="conner_round"></a>
-        <a href="mycon.html">CONTACT</a>
+        <!-- <a href="mycon.html">CONTACT</a> -->
         <a href="myblog.html">BLOG</a>
         <a href="mywork.html">MY WORK</a>
         <a href="aboutme.html">ABOUT ME</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
     </div>
     <br>
-    <img src="aboutmeBanner.png" alt="Smeet" class="cenBanner">
+    <img src="AboutMe/aboutmeBanner.png" alt="Smeet" class="cenBanner">
     <img src="AboutMe/aboutmeSquareBanner.png" alt="Smeet" class="cenBannersquare">
     <p align="center" class="centText">Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be
         wondering about the design for the logo. The reasoning is simple, Smeet means to smile.</p>
@@ -56,7 +56,7 @@
                     <!--container consist the image and text to display center
                      when full screen---------------------------------------->
                     <div class="hoverOverImage">
-                        <img src="me2.jpg" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
+                        <img src="AboutMe/me2.jpg" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
                         <!--<a href="aboutme.html">-->
                         <div class="hoverOverImage-layer_top">
                             <div class="hoverOverImage-text">Hike upto the Belmont Trig, December 2017</div>
@@ -69,7 +69,7 @@
                 <div class="column">
                     <br>
                     <div class="hoverOverImage">
-                        <img src="web1.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+                        <img src="AboutMe/web1.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
                         <div class="hoverOverImage-layer_top">
                             <div class="hoverOverImage-text">Developing my website</div>
                         </div>
@@ -139,7 +139,7 @@
                             <div class="column">
                                 <br>
                                 <div class="hoverOverImage">
-                                    <img src="tut.png" alt="Tutorial slide" class="hoverOverImage-layer_bottom" id="conner_round">
+                                    <img src="AboutMe/tut.png" alt="Tutorial slide" class="hoverOverImage-layer_bottom" id="conner_round">
                                     <div class="hoverOverImage-layer_top">
                                         <div class="hoverOverImage-text">Tutorial slide for privacy and ethics
                                             (FaceBook 101) </div>
@@ -175,7 +175,7 @@
                             <div class="column">
                                 <br>
                                 <div class="hoverOverImage">
-                                    <img src="shop1.jpg" alt="Shop" class="hoverOverImage-layer_bottom" id="conner_round">
+                                    <img src="AboutMe/shop1.jpg" alt="Shop" class="hoverOverImage-layer_bottom" id="conner_round">
                                     <div class="hoverOverImage-layer_top">
                                         <div class="hoverOverImage-text">Rendering of the Family-owned store</div>
                                     </div>
@@ -275,7 +275,7 @@
                             <div class="column">
                                 <br>
                                 <div class="hoverOverImage">
-                                    <img src="sc1.jpg" alt="Shop" class="hoverOverImage-layer_bottom" id="conner_round">
+                                    <img src="AboutMe/sc1.jpg" alt="Shop" class="hoverOverImage-layer_bottom" id="conner_round">
                                     <div class="hoverOverImage-layer_top">
                                         <div class="hoverOverImage-text">Scots College lion statue</div>
                                     </div>
