--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <!--container consist the image and text to display center
                   when full screen---------------------------------------->
                 <div class="hoverOverImage">
-                    <img src="2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
+                    <img src="Webimages/2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
                         <div class="hoverOverImage-layer_top">
                             <div class="hoverOverImage-text">Web Development & UX</div>
@@ -57,7 +57,7 @@
                 </div>
                 <br><br>
                 <div class="hoverOverImage">
-                    <img src="ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
+                    <img src="Webimages/ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
                         <div class="hoverOverImage-layer_top">
                             <div class="hoverOverImage-text">Graphical Design Projects</div>
@@ -69,7 +69,7 @@
             <div class="column">
                 <br>
                 <div class="hoverOverImage">
-                    <img src="bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+                    <img src="Webimages/bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
                         <div class="hoverOverImage-layer_top">
                             <div class="hoverOverImage-text">Native App</div>
@@ -78,7 +78,7 @@
                 </div>
                 <br><br>
                 <div class="hoverOverImage">
-                    <img src="conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+                    <img src="Webimages/conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
                         <div class="hoverOverImage-layer_top">
                             <div class="hoverOverImage-text">Programing Projects</div>
