--- a/mywork.html
+++ b/mywork.html
@@ -60,7 +60,7 @@
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
                         <!-- 2shakes project ------------------------------>
-                        <img src="2shakes.png" alt="2shakes redesigned UI" class="border-tlr-radius">  
+                        <img src="Webimages/2shakes.png" alt="2shakes redesigned UI" class="border-tlr-radius">  
                      </div>
                      <div class="card__meta">
                         <a href="#">CX / UX</a>
@@ -153,7 +153,7 @@
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
-                        <img src="conwaysMe.jpeg" alt="Pair programming and leading" class="border-tlr-radius">
+                        <img src="Webimages/conwaysMe.jpeg" alt="Pair programming and leading" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
                         <a href="#">Java</a>
