About me tech skills simplyfied

--- a/2Shakes.html
+++ b/2Shakes.html
@@ -26,8 +26,8 @@
     </div>
     <br>
     <!-- banner  ------------------------------>
-    <img src="dimmuBurger/dimmuBurger_longbanner.png" alt="dimmu Burger" class="cenBanner">
-    <img src="dimmuBurger/dimmuBurger_myburger.png" alt="dimmu Burger" class="cenBannersquare">
+    <img src="2shakes/2shakesBanner.png" alt="dimmu Burger" class="cenBanner">
+    <img src="2shakes/2shakesbannersqu.png" alt="dimmu Burger" class="cenBannersquare">
     <div id="overview"></div>
     <!-- Contact me buttons ------------------------------>
     <div class="sticky">
@@ -61,7 +61,6 @@
 			</div>
 			
 <br>
-		<a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
 		<!-- footer ------------------------------>
 		<footer class="footer">
 			<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
