--- a/aboutme.html
+++ b/aboutme.html
@@ -83,7 +83,34 @@
                 <div class="collapsible-content">
                     <div class="content-inner">
                         <h3>Tools and Software</h3>
-                        <li>tobechanged</li>
+                        <table style="color: black">
+                            <tr>
+                                <td><img src="AboutMe/programming.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px; margin: 0 5px"></td>
+                                <td style="width: 22%;">Languages</td>
+                                <td>Java, HTML 5, CSS 3, PHP, Angular, JavaScript (My Portfolio, Dimmu Burger)</td>
+                            </tr>
+                            <tr>
+                                <td><img src="AboutMe/web-design.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px ; margin: 0 5px"></td>
+                                <td>Mobile & UX</td>
+                                <td>Android Studio (Everest browser), Justinmind Prototyper, Pencil (2Shakes & Central Police)</td>
+                            </tr>
+                            <tr>
+                                <td><img src="AboutMe/database.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px ; margin: 0 5px"></td>
+                                <td>Databases </td>
+                                <td>SQLite, PostgreSQL, MariaDB, MongoDB (Sports World, Dimmu Burger with Heroku)</td>
+                            </tr>
+                            <tr>
+                                <td><img src="AboutMe/design.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px ; margin: 0 5px"></td>
+                                <td>Design</td>
+                                <td>Adobe Creative Suite, Sketch-Up, SU podium (Wellington Transportation, Home 101)</td>
+                            </tr>
+                            <tr>
+                                <td><img src="AboutMe/accounting.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px ; margin: 0 5px"></td>
+                                <td>Analytical & Diagraming</td>
+                                <td>LINQ, Google Analytics, Bizagi and MS Visio (Conway’s Game Java with UML)</td>
+                            </tr>
+                        </table>
+                        <!-- <li>tobechanged</li>
                         <li>SQLite</li>
                         <li>Android Studio (Native apps)</li>
                         <li>PostgreSQL & MongoDB (Not only SQL)</li>
@@ -102,7 +129,7 @@
                         <li>Raspbian (pi)</li>
                         <li>Sketch-Up, SU podium</li>
                         <li>Microsoft PowerPoint for designing visually effective presentations</li>
-                        <li>WordPress</li>
+                        <li>WordPress</li> -->
                     </div>
                 </div>
             </div>
@@ -139,7 +166,8 @@
                             <div class="column">
                                 <br>
                                 <div class="hoverOverImage">
-                                    <img src="AboutMe/tut.png" alt="Tutorial slide" class="hoverOverImage-layer_bottom" id="conner_round">
+                                    <img src="AboutMe/tut.png" alt="Tutorial slide" class="hoverOverImage-layer_bottom"
+                                        id="conner_round">
                                     <div class="hoverOverImage-layer_top">
                                         <div class="hoverOverImage-text">Tutorial slide for privacy and ethics
                                             (FaceBook 101) </div>
@@ -150,7 +178,7 @@
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="column">
+                            <div class="column" >
                                 <h3>S & S Patel Superette</h3>
                                 <p>I work at a family-owned grocery store located in the vibrant Wellington CBD. This
                                     experience has helped me understand the dynamics of retail business.</p>
