--- a/aboutme.html
+++ b/aboutme.html
@@ -266,7 +266,7 @@
                         </li>
                         <br>
                         <video class='center' width="640" height="480" controls>
-                            <source src="cubadupa.mp4" type="video/mp4" id="conner_round">
+                            <source src="AboutMe/cubadupa.mp4" type="video/mp4" id="conner_round">
                             Your browser does not support the video tag.
                         </video>
                         <br>
