--- a/myblog.html
+++ b/myblog.html
@@ -3,6 +3,7 @@
    <head>
       <title>My Web</title>
       <link rel="stylesheet" type="text/css" href="style.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       </style>
    </head>
    <body>
@@ -15,7 +16,7 @@
          <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
       </div>
       <div class="bannerContainer">
-         <img src="p39.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
+         <img src="pictures/p39.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
          <div class="bottom-left">
             <p style="color: white"><b>BLOG</b></p>
          </div>
@@ -23,35 +24,35 @@
       <div class="centerWrap">
          <div class="row">
             <div class="column">
-               <img src="p4.jpg" style="width:100%">
-               <img src="p7.jpg" style="width:100%">
-               <img src="p10.jpg" style="width:100%">
-               <img src="p13.jpg" style="width:100%">
-               <img src="p16.jpg" style="width:100%">
-               <img src="p19.jpg" style="width:100%">
+               <img src="pictures/p4.jpg" style="width:100%">
+               <img src="pictures/p7.jpg" style="width:100%">
+               <img src="pictures/p10.jpg" style="width:100%">
+               <img src="pictures/p13.jpg" style="width:100%">
+               <img src="pictures/p16.jpg" style="width:100%">
+               <img src="pictures/p19.jpg" style="width:100%">
             </div>
             <div class="column">
-               <img src="p5.jpg" style="width:100%">
-               <img src="p8.jpg" style="width:100%">
-               <img src="p11.jpg" style="width:100%">
-               <img src="p14.jpg" style="width:100%">
-               <img src="p17.jpg" style="width:100%">
-               <img src="p20.jpg" style="width:100%">
+               <img src="pictures/p5.jpg" style="width:100%">
+               <img src="pictures/p8.jpg" style="width:100%">
+               <img src="pictures/p11.jpg" style="width:100%">
+               <img src="pictures/p14.jpg" style="width:100%">
+               <img src="pictures/p17.jpg" style="width:100%">
+               <img src="pictures/p20.jpg" style="width:100%">
             </div>
             <div class="column">
-               <img src="p6.jpg" style="width:100%">
-               <img src="p9.jpg" style="width:100%">
-               <img src="p12.jpg" style="width:100%">
-               <img src="p15.jpg" style="width:100%">
-               <img src="p18.jpg" style="width:100%">
+               <img src="pictures/p6.jpg" style="width:100%">
+               <img src="pictures/p9.jpg" style="width:100%">
+               <img src="pictures/p12.jpg" style="width:100%">
+               <img src="pictures/p15.jpg" style="width:100%">
+               <img src="pictures/p18.jpg" style="width:100%">
             </div>
             <div class="column">
-               <img src="p21.jpg" style="width:100%">
-               <img src="p22.jpg" style="width:100%">
-               <img src="p23.jpg" style="width:100%">
-               <img src="p24.jpg" style="width:100%">
-               <img src="p25.jpg" style="width:100%">
-               <img src="p26.jpg" style="width:100%">
+               <img src="pictures/p21.jpg" style="width:100%">
+               <img src="pictures/p22.jpg" style="width:100%">
+               <img src="pictures/p23.jpg" style="width:100%">
+               <img src="pictures/p24.jpg" style="width:100%">
+               <img src="pictures/p25.jpg" style="width:100%">
+               <img src="pictures/p26.jpg" style="width:100%">
             </div>
          </div>
       </div>
