--- a/myblog.html
+++ b/myblog.html
@@ -21,6 +21,7 @@
             <p style="color: white"><b>BLOG</b></p>
          </div>
       </div>
+      <p>Blog Write-ups coming soon</p>
       <div class="centerWrap">
          <div class="row">
             <div class="column">
