--- a/mywork.html
+++ b/mywork.html
@@ -309,11 +309,11 @@
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
                         <!-- 2shakes project ------------------------------>
-                        <img src="cp1.png" alt="Central Police dashboard" class="border-tlr-radius">  
+                        <img src="cp1.png" alt="Banking systerm 2 languages" class="border-tlr-radius">  
                      </div>
                      <div class="card__meta">
                         <a href="#">UI / UX</a>
-                        <time>Late 2016</time>
+                        <time>2018</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
