--- a/aboutme.html
+++ b/aboutme.html
@@ -87,7 +87,7 @@
                             <tr>
                                 <td><img src="AboutMe/programming.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px; margin: 0 5px"></td>
                                 <td style="width: 22%;">Languages</td>
-                                <td>Java, HTML 5, CSS 3, PHP, Angular, JavaScript (My Portfolio, Dimmu Burger)</td>
+                                <td>Java, HTML 5, CSS 3, PHP, Angular, Python, C# and JavaScript (My Portfolio, Dimmu Burger)</td>
                             </tr>
                             <tr>
                                 <td><img src="AboutMe/web-design.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px ; margin: 0 5px"></td>
