--- a/mywork.html
+++ b/mywork.html
@@ -312,7 +312,7 @@
                         <img src="cp1.png" alt="Banking systerm 2 languages" class="border-tlr-radius">  
                      </div>
                      <div class="card__meta">
-                        <a href="#">C# and Python</a>
+                        <a href="#">UI / UX</a>
                         <time>2018</time>
                      </div>
                      <div class="card__content card__padding">
@@ -321,7 +321,7 @@
                         </div>
                         <article class="card__article">
                            <h3><a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html#/screens/62e8635e-ffb2-4bf1-8561-3ceee7b2fd83">Central Police</a></h3>
-                           <p>Implementing a banking system in two different languages. </p>
+                           <p>Central police a real-time dashboard to help the policing department in Wellington to respond to calls, reporting the incident and deploying resources.</p>
                         </article>
                      </div>
                   </div>
