--- a/Launchpadreview.html
+++ b/Launchpadreview.html
@@ -24,16 +24,16 @@
         <a href="aboutme.html">ABOUT ME</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
     </div>
-    <img src="Webimages/Launchpad_logo.png" alt="dimmu Burger" class="cenBanner" style="width: 30%">
+    <img src="Webimages/Launchpad_logo.png" alt="dimmu Burger" class="cenBanner" style="width: 30%" id="summary">
     <!-- Contact me buttons ------------------------------>
     <div class="sticky">
         <!-- <div class="mar"></div> -->
         <nav class="shift">
             <ul>
-                <li><a href="#overview">Summary</a></li>
-                <li><a href="#planning">Review</a></li>
-                <li><a href="#dev">Reflection</a></li>
-                <li><a href="#">References</a></li>
+                <li><a href="#summary">Summary</a></li>
+                <li><a href="#review">Review</a></li>
+                <li><a href="#eva">Evaluation</a></li>
+                <li><a href="#ref">References</a></li>
             </ul>
         </nav>
         <div class="progress-container">
@@ -53,7 +53,7 @@
             ‘Launchpad's Quest for A Better and Agile User Interface’ by Martin Albisetti who worked with an amazing
             Launchpad team at Canonical. Martin addresses his experience of 'shifting the Launchpads teams focus to a
             more user-friendly mindset' by implementing the agile methodology with changes to their processes ensuring
-            they were able to deliver iterative improvements from a usability perspective (Albisetti, 2010, p. 1).
+            <span id="review"></span> were able to deliver iterative improvements from a usability perspective (Albisetti, 2010, p. 1).
             Martin emphasises that they went from nobody owing the user interface to the developer feeling a strong
             ownership over the UX (Albisetti, 2010, p. 1).</p>
         <h2 class="w">Review</h2>
@@ -174,7 +174,7 @@
             problems can be solved by the organisation rather than adding a layer of over heads and bureaucracy (Yorke,
             2018). Agile for UX designer would not be one-size fits all because again it is totally based on each case
             and depend on many processes and which backlog stories the development teams choose on developing. For the
-            UX team to also participate in the stand-up meeting would be adventurous, and this would allow them to have
+            <span id="eva"></span> team to also participate in the stand-up meeting would be adventurous, and this would allow them to have
             more of managerial role as well. Therefore, better communication across the teams and they can share the
             feedback from the users. </p>
 
@@ -199,7 +199,7 @@
             structure Martin was able to introduce UX review and mirror many of the processes which Canonical had for
             the development side. The unique point of difference was that he was able to mentor some of his interested
             developers to perform to the UX review which enables them to have more confidence better UI and have
-            ownership over the UX. Throughout the process, the author influence and drove UX into the development
+            <span id="ref"></span>ownership over the UX. Throughout the process, the author influence and drove UX into the development
             process in a manner which allowed to fit in well the existing agile software development.</p>
         <h1 class="w">References</h1>
         <li>Albisetti, M. (2010). Launchpad's Quest For A Better And Agile User Interface. 1-7.</li>
