Central Police personas

--- a/mywork.html
+++ b/mywork.html
@@ -289,12 +289,12 @@
                         <img src="cp1.png" alt="Central Police dashboard" class="border-tlr-radius">  
                      </div>
                      <div class="card__meta">
-                        <a href="#">UI / UX</a>
+                        <a href="centralPolice.html">UI / UX</a>
                         <time>Late 2016</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="#"></a>
+                           <a id="share" class="share-toggle share-icon" href="centralPolice.html"></a>
                         </div>
                         <article class="card__article">
                            <h3><a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html#/screens/62e8635e-ffb2-4bf1-8561-3ceee7b2fd83">Central Police</a></h3>
