--- a/Launchpadreview.html
+++ b/Launchpadreview.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Dimmu Burger | Project</title>
+    <title>Agile UX Designer Influence</title>
     <!-- Stylesheets ------------------------------>
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <!-- My my mini icon ------------------------------>
