central police wireframes

--- a/centralPolice.html
+++ b/centralPolice.html
@@ -36,7 +36,7 @@
             <ul>
                 <li><a href="#overview">Personas</a></li>
                  <li><a href="#planning">Wireframes</a></li>
-                <li><a href="#dev">Evaluation</a></li>
+                <li><a href="#dev">User Feedback</a></li>
                 <li><a href="#">Prototype</a></li> 
             </ul>
         </nav>
@@ -48,13 +48,20 @@
 		<div class="centerWrap">
             <h1 class="w">Personas </h1>
             <h2>Primary Personas</h2>
-            <img src="centralpolice/personaslinda.png" alt="dimmu Burger" class="cenimg" style="max-width: 800px"><br>
-            <img src="centralpolice/personasrichard.png" alt="dimmu Burger" class="cenimg" style="max-width: 800px"><br>
-            <img src="centralpolice/personasalan.png" alt="dimmu Burger" class="cenimg" style="max-width: 800px"><br>
+            <img src="centralpolice/personaslinda.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
+            <img src="centralpolice/personasrichard.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
+            <img src="centralpolice/personasalan.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
             <h2>secondary Personas</h2>
-            <img src="centralpolice/personasroger.png" alt="dimmu Burger" class="cenimg" style="max-width: 800px"><br>
-            <img src="centralpolice/personassonia.jpg" alt="dimmu Burger" class="cenimg" style="max-width: 800px"><br>
-            <img src="centralpolice/personasmattew.png" alt="dimmu Burger" class="cenimg" style="max-width: 800px"><br>
+            <img src="centralpolice/personasroger.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
+            <img src="centralpolice/personassonia.jpg" alt="Personas" class="cenimg" style="max-width: 800px"><br>
+            <img src="centralpolice/personasmattew.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
+            <h1 class="w">Wireframes </h1>
+            <img src="centralpolice/wireframeCP.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
+            <img src="centralpolice/simpleWireframe.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
+            <h1 class="w">User Feedback </h1>
+            <img src="centralpolice/formsummary.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
+            <h1 class="w">User Feedback </h1>
+            <iframe width="1000" src="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" allowfullscreen></iframe>
 		</div>
 			
 <br>
