Central police completed

--- a/centralPolice.html
+++ b/centralPolice.html
@@ -39,7 +39,8 @@
             designing several wireframes (concepts) to fulfil the requirements of the user personas. Then create the
             initial wireframes to get people (users) to give feedback. Based on the feedback, develop and improve the
             final high-fidelity prototype ensuring all aspects have been cover in user-friendly manner.</p>
-            <a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" target="_blank">View Central Police Prototype</a> 
+        <a id="butproto" href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" target="_blank">View
+            Central Police Prototype</a>
     </div>
     <!-- Contact me buttons ------------------------------>
     <div class="sticky">
@@ -89,6 +90,10 @@
             side, the user can log the incident, enter the offender details, view map and dispatch units. </p>
         <img src="centralpolice/simpleWireframe.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
         <h1 class="w">User Feedback </h1>
+        <p>To get feedback from other people for my initial prototype, used Google forms for the user to give valuable
+            feedback based on the USE questionnaire questions. The main category of questions I asked was usefulness,
+            ease of use, ease of learning and satisfaction. The feedback process enabled me to enhance the user
+            experience and interaction for the prototype.</p>
         <img src="centralpolice/formsummary.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
         <h1 class="w">Prototype </h1>
         <img src="centralpolice/cplogin.png" alt="" class="cenimg" style="max-width: 800px"><br>
@@ -114,6 +119,9 @@
             the user able to select the row and change the status of the incident. </p>
         <img src="centralpolice/otherrecords.png" alt="" class="cenimg" style="max-width: 800px"><br>
         <p>The current screen displays the details of all the unit and incidents. </p>
+
+        <a id="butproto" href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" target="_blank">View
+            Central Police Prototype</a>
     </div>
 
     <br>
