--- a/centralPolice.html
+++ b/centralPolice.html
@@ -28,8 +28,23 @@
     <!-- banner  ------------------------------>
     <img src="centralpolice/centralpolicebanner.png" alt="dimmu Burger" class="cenBanner">
     <img src="centralpolice/centralpolicesquare.png" alt="dimmu Burger" class="cenBannersquare">
-    <div id="overview"></div>
+    <div class="sticky">
+        <!-- <div class="mar"></div> -->
+        <nav class="shift">
+            <ul>
+                <li><a href="#overview">Personas</a></li>
+                <li><a href="#wire">Wireframes</a></li>
+                <li><a href="#feed">Feedback</a></li>
+                <li><a href="#proto">Prototype</a></li>
+            </ul>
+        </nav>
+        <div class="progress-container">
+            <div class="progress-bar" id="myBar"></div>
+        </div>
+    </div>
     <div class="centerWrap">
+            <a id="butproto" href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" target="_blank">View
+                Central Police Prototype</a>
         <p>CENTRAL POLICE is a metropolitan police dispatch system under development, which is responsible for sending
             mobile units to incidents like traffic accidents, domestic incidents, robberies, etc. </p>
         <p>CENTRAL POLICE runs 24/7 in a call centre located in downtown Wellington. The call centre operators are
@@ -38,25 +53,11 @@
         <p>The objective is to create personas primary and secondary for the Central police application prototype when
             designing several wireframes (concepts) to fulfil the requirements of the user personas. Then create the
             initial wireframes to get people (users) to give feedback. Based on the feedback, develop and improve the
-            final high-fidelity prototype ensuring all aspects have been cover in user-friendly manner.</p>
-        <a id="butproto" href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" target="_blank">View
-            Central Police Prototype</a>
+            final high-fidelity prototype ensuring all aspects have been cover in user-friendly manner.</p><div id="overview"></div><br>
+            
     </div>
     <!-- Contact me buttons ------------------------------>
-    <div class="sticky">
-        <!-- <div class="mar"></div> -->
-        <nav class="shift">
-            <ul>
-                <li><a href="#overview">Personas</a></li>
-                <li><a href="#planning">Wireframes</a></li>
-                <li><a href="#dev">Feedback</a></li>
-                <li><a href="#">Prototype</a></li>
-            </ul>
-        </nav>
-        <div class="progress-container">
-            <div class="progress-bar" id="myBar"></div>
-        </div>
-    </div>
+   
     <!-- Contact me buttons ------------------------------>
     <div class="centerWrap">
         <h1 class="w">Personas </h1>
@@ -77,7 +78,7 @@
             features. </p>
         <img src="centralpolice/personasroger.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
         <img src="centralpolice/personassonia.jpg" alt="Personas" class="cenimg" style="max-width: 800px"><br>
-        <img src="centralpolice/personasmattew.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
+        <img src="centralpolice/personasmattew.png" alt="Personas" class="cenimg" style="max-width: 800px"><div id="wire"></div><br>
         <h1 class="w">Wireframes </h1>
         <p><b>Wireframe</b> were used a visual schematic or template of the screen to communicate interface and
             interaction design. I used a sketchy GUI window style using an application called Pencil. Menus, buttons
@@ -88,13 +89,13 @@
         <p>The wireframe above is the dashboard form with the report's details on the top left, followed by the status
             and level of risk. It also nice to have the officer narrations for those secondary personas. On the right
             side, the user can log the incident, enter the offender details, view map and dispatch units. </p>
-        <img src="centralpolice/simpleWireframe.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
+        <img src="centralpolice/simpleWireframe.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><div id="feed"></div><br>
         <h1 class="w">User Feedback </h1>
         <p>To get feedback from other people for my initial prototype, used Google forms for the user to give valuable
             feedback based on the USE questionnaire questions. The main category of questions I asked was usefulness,
             ease of use, ease of learning and satisfaction. The feedback process enabled me to enhance the user
             experience and interaction for the prototype.</p>
-        <img src="centralpolice/formsummary.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
+        <img src="centralpolice/formsummary.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><div id="proto"></div><br>
         <h1 class="w">Prototype </h1>
         <img src="centralpolice/cplogin.png" alt="" class="cenimg" style="max-width: 800px"><br>
         <p>Login for with 'tab' functionality (accelerator feature).</p>
