--- a/aboutme.html
+++ b/aboutme.html
@@ -29,8 +29,8 @@
         wondering about the design for the logo. The reasoning is simple, Smeet means to smile.</p>
     <div class="centerWrap">
         <div id="lineA">
-            <p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the
-                design for the logo. The reasoning is simple, Smeet means to smile.</p>
+            <!-- <p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the
+                design for the logo. The reasoning is simple, Smeet means to smile.</p> -->
             <p id="Dcolor">
                 I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>
                 having acquired knowledge in the fields of <em>accountancy, taxation, commercial law and information
