--- a/myblog.html
+++ b/myblog.html
@@ -1,70 +1,92 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>My Web</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      </style>
-   </head>
-   <body>
-      <div class="nav1" id="mynav1">
-         <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
-         <!-- <a href="mycon.html">CONTACT</a> -->
-         <a href="myblog.html">BLOG</a>
-         <a href="mywork.html">MY WORK</a>
-         <a href="aboutme.html">ABOUT ME</a>
-         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
-      </div>
-      <div class="bannerContainer">
-         <img src="pictures/p39.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
-         <div class="bottom-left">
-            <p style="color: white"><b>BLOG</b></p>
-         </div>
-      </div>
-      <p>Blog Write-ups coming soon</p>
-      <div class="centerWrap">
-         <div class="row">
-            <div class="column">
-               <img src="pictures/p4.jpg" style="width:100%">
-               <img src="pictures/p7.jpg" style="width:100%">
-               <img src="pictures/p10.jpg" style="width:100%">
-               <img src="pictures/p13.jpg" style="width:100%">
-               <img src="pictures/p16.jpg" style="width:100%">
-               <img src="pictures/p19.jpg" style="width:100%">
-            </div>
-            <div class="column">
-               <img src="pictures/p5.jpg" style="width:100%">
-               <img src="pictures/p8.jpg" style="width:100%">
-               <img src="pictures/p11.jpg" style="width:100%">
-               <img src="pictures/p14.jpg" style="width:100%">
-               <img src="pictures/p17.jpg" style="width:100%">
-               <img src="pictures/p20.jpg" style="width:100%">
-            </div>
-            <div class="column">
-               <img src="pictures/p6.jpg" style="width:100%">
-               <img src="pictures/p9.jpg" style="width:100%">
-               <img src="pictures/p12.jpg" style="width:100%">
-               <img src="pictures/p15.jpg" style="width:100%">
-               <img src="pictures/p18.jpg" style="width:100%">
-            </div>
-            <div class="column">
-               <img src="pictures/p21.jpg" style="width:100%">
-               <img src="pictures/p22.jpg" style="width:100%">
-               <img src="pictures/p23.jpg" style="width:100%">
-               <img src="pictures/p24.jpg" style="width:100%">
-               <img src="pictures/p25.jpg" style="width:100%">
-               <img src="pictures/p26.jpg" style="width:100%">
-            </div>
-         </div>
-      </div>
-      <footer class="footer">
-         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-         <div class="container text-center">
+
+<head>
+    <title>Dimmu Burger | Project</title>
+    <!-- Stylesheets ------------------------------>
+    <link rel="stylesheet" type="text/css" href="CSS/project.css">
+    <!-- My my mini icon ------------------------------>
+    <link rel="icon" href="spMini.png">
+    <!-- Make the scale of screen to 1 to device ------------------------------>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<script type="text/javascript" src="Smeetjavascript.js"></script>
+</head>
+
+<body>
+    <!-- nav bar ------------------------------>
+    <div class="nav1" id="mynav1">
+        <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
+        <!-- <a href="mycon.html">CONTACT</a> -->
+        <a href="myblog.html">BLOG</a>
+        <a href="mywork.html">MY WORK</a>
+        <a href="aboutme.html">ABOUT ME</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
+    </div>
+    <br>
+    <!-- banner  ------------------------------>
+    <img src="blog/blogBanner.png" alt="blog" class="cenBanner">
+    <img src="blog/squareblogbanner.png" alt="blog" class="cenBannersquare">
+    <div id="overview"></div>
+    <!-- Contact me buttons ------------------------------>
+    <div class="sticky">
+        <!-- <div class="mar"></div> -->
+        <nav class="shift">
+            <ul>
+                <li><a href="#">Traveler Guide</a></li>
+                <li><a href="https://smeet-patel.github.io/Launchpadreview.html" title="Agile UX Designer Influence">Launchpad</a></li>
+                <!-- <li><a href="#dev">Development</a></li> -->
+                <!-- <li><a href="#">Reflection</a></li> -->
+            </ul>
+        </nav>
+        <div class="progress-container">
+            <div class="progress-bar" id="myBar"></div>
+        </div>
+    </div>
+    <!-- Contact me buttons ------------------------------>
+    <div class="centerWrap">
+        <h1 class="w">Traveler Guide</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d305263.6855162783!2d115.12602790215035!3d-8.496069224919468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d739f22c9c3%3A0x54a38afd6b773d1c!2sUbud%2C+Gianyar%2C+Bali%2C+Indonesia!5e1!3m2!1sen!2snz!4v1544684952370"
+            frameborder="0" style="border:0; width: 100%; min-height: 400px; border-radius: 15px;" allowfullscreen></iframe>
+        <p style="color: orange">An interactive map is coming soon... Where next? Melbourne, Agra, Singapore or Otago region?</p>
+            <!-- <br> -->
+        <h1 class="w">Bail</h1>
+        <p>Ubud - famous for being the setting of the ‘love’ segment of the best-selling memoir, Eat Pray Love, Ubud is
+            often referred to as the ‘Cultural Heart of Bali’. For some Ubud acts as a place of spiritual awakening,
+            for some it is a get away from the charged atmosphere of South Bali and for others it is the one place in
+            the world that convinced them to turn away from their western lifestyles and turn a stay of a couple of
+            days into months or years. </p>
+        <img src="blog/p39.jpg" alt="rice feilds" class="cenimg" style="max-width: 800px"><br>
+        <p>The green terraced hills of Ubud are a cocktail of traditional Balinese Culture, yoga, elaborate vegan
+            delicacies, beautiful temples infused with royalty. We enjoyed the food, the cultural shows, the temples
+            and more importantly the hospitality offered by the locals. In contrast to South Bali which is hosted by
+            slightly aggressive, Ubud, is home to Balinese people who are some of the friendliest individuals you would
+            meet around the region. </p>
+        <p>While travelling through Bali, Ubud is the ideal base to explore central, northern and eastern parts of
+            Bali. It allows for you to get away from the touristy vibe and experience Bali for what it traditionally
+            represents. </p>
+        <img src="blog/p35.jpg" alt="rice feilds" class="cenimg" style="max-width: 800px"><br>
+        <p><b>Food specialities: </b> Vegan delicacies, detox drinks, cheap cocktails</p>
+        <p><b>Attractions: </b> Monkey Forest Sanctuary, Tegallalang rice fields, Yoga centers, massage spas, art
+            markets, cultural shows </p>
+        <p><b>Tips: </b>Always bargain – don’t let the over friendliness fool you (start 20-25% of the proposed price),
+            talk to locals and hire a car + driver for the whole day, the food is worth the money</p>
+    </div>
+
+
+
+    <br>
+    <!-- footer ------------------------------>
+    <footer class="footer">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
+        <div class="container text-center">
             <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
             <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
             <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
             <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
-         </div>
-      </footer>
-   </body>
+        </div>
+    </footer>
+</body>
+
 </html>
