--- a/mywork.html
+++ b/mywork.html
@@ -297,7 +297,7 @@
                            <a id="share" class="share-toggle share-icon" href="centralPolice.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html#/screens/62e8635e-ffb2-4bf1-8561-3ceee7b2fd83">Central Police</a></h3>
+                           <h3><a href="centralPolice.html">Central Police</a></h3>
                            <p>Central police a real-time dashboard to help the policing department in Wellington to respond to calls, reporting the incident and deploying resources.</p>
                         </article>
                      </div>
