About me colour change for text
too much blue before

--- a/aboutme.html
+++ b/aboutme.html
@@ -87,12 +87,14 @@
                             <tr>
                                 <td><img src="AboutMe/programming.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px; margin: 0 5px"></td>
                                 <td style="width: 22%;">Languages</td>
-                                <td>Java, HTML 5, CSS 3, PHP, Angular, Python, C# and JavaScript (My Portfolio, Dimmu Burger)</td>
+                                <td>Java, HTML 5, CSS 3, PHP, Angular, Python, C# and JavaScript (My Portfolio, Dimmu
+                                    Burger)</td>
                             </tr>
                             <tr>
                                 <td><img src="AboutMe/web-design.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px ; margin: 0 5px"></td>
                                 <td>Mobile & UX</td>
-                                <td>Android Studio (Everest browser), Justinmind Prototyper, Pencil (2Shakes & Central Police)</td>
+                                <td>Android Studio (Everest browser), Justinmind Prototyper, Pencil (2Shakes & Central
+                                    Police)</td>
                             </tr>
                             <tr>
                                 <td><img src="AboutMe/database.png" alt="dimmu Burger" class="Languages icon" style="max-width: 20px ; margin: 0 5px"></td>
@@ -178,7 +180,7 @@
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="column" >
+                            <div class="column">
                                 <h3>S & S Patel Superette</h3>
                                 <p>I work at a family-owned grocery store located in the vibrant Wellington CBD. This
                                     experience has helped me understand the dynamics of retail business.</p>
@@ -221,12 +223,15 @@
                 <div class="collapsible-content2">
                     <div class="content-inner2">
                         <li><b>ACCY 223 Class Representative (Class Rep)</b><br>
-                            My responsible as a Student Representative (Class Rep) for the course paper Management
-                            Accounting, was to facilitate in communication between students and lecturers, directing
-                            course feedback to the course Administrator/ Coordinator and assisting students with any
-                            concerns.
+                            <p style="color: black"> My responsible as a Student Representative (Class Rep) for the
+                                course paper Management
+                                Accounting, was to facilitate in communication between students and lecturers,
+                                directing
+                                course feedback to the course Administrator/ Coordinator and assisting students with
+                                any
+                                concerns.</p>
                         </li>
-                        <dd>Some of the additional responsibilities involved:</dd>
+                        <span style="color: black">Some of the additional responsibilities involved:</span>
                         <dd>
                             <li>Reporting back to the teaching staff about test performance and uncertainty or queries
                                 raised by the students.</li>
@@ -234,11 +239,14 @@
                         <hr>
                         <li>
                             <b>INFO 141 Class Representative (Class Rep)</b><br>
-                            My responsible as a Student Representative (Class Rep) for course paper Systems Analysis
-                            (INFO 141), was to facilitate in communication between students and lecturers, directing
-                            course feedback to the course Administrator/ Coordinator and assisting students with any
-                            concerns. <br>
-                            <dd>Some of the additional responsibilities involved:</dd>
+                            <p style="color: black">My responsible as a Student Representative (Class Rep) for course
+                                paper Systems Analysis
+                                (INFO 141), was to facilitate in communication between students and lecturers,
+                                directing
+                                course feedback to the course Administrator/ Coordinator and assisting students with
+                                any
+                                concerns. </p>
+                            <span style="color: black"></span>Some of the additional responsibilities involved:</span>
                             <dd>
                         <li>Negotiation of the project date submission to be changed.</li>
                         </dd>
@@ -248,21 +256,24 @@
                         </li>
                         <hr>
                         <li><b>Maori and Pacifica student’s helpdesk</b><br>
-                            Running the Maori and Pacifica students helpdesk for INFO 101 for the website project.
-                            Guiding and teaching students when assistance is required.
+                            <p style="color: black">Running the Maori and Pacifica students helpdesk for INFO 101 for
+                                the website project.
+                                Guiding and teaching students when assistance is required.</p>
                         </li>
                         <hr>
                         <li><b>South coast beach clean-up and McAllister Park Tree Planting</b><br>
-                            Cleaning our beaches (Owhiro Bay) [September] and planting trees
+                            <p style="color: black">Cleaning our beaches (Owhiro Bay) [September] and planting trees</p>
                         </li>
                         <hr>
                         <li><b>Victoria International Leadership Programme 2016 - present</b><br>
-                            Participating in events and attending leadership / cultural seminars
+                            <p style="color: black">Participating in events and attending leadership / cultural
+                                seminars</p>
                         </li>
                         <hr>
                         <li><b>Cuba-Dupa (cultural and event Volunteer) 2018</b><br>
-                            Artist Minder for New Zealand School of Music (Orchestra) and was also offered the
-                            opportunity to conduct the first performace.
+                            <p style="color: black">Artist Minder for New Zealand School of Music (Orchestra) and was
+                                also offered the
+                                opportunity to conduct the first performace.</p>
                         </li>
                         <br>
                         <video class='center' width="640" height="480" controls>
