--- a/mywork.html
+++ b/mywork.html
@@ -78,6 +78,29 @@
                   </div>
                </div>
             </div>
+            <div class="child">
+               <div class="wrapper">
+                  <div class="card radius shadowDepth1">
+                     <div class="card__image border-tlr-radius">
+                        <!-- 2shakes project ------------------------------>
+                        <img src="cp1.png" alt="Central Police dashboard" class="border-tlr-radius">  
+                     </div>
+                     <div class="card__meta">
+                        <a href="centralPolice.html">UI / UX</a>
+                        <time>Late 2016</time>
+                     </div>
+                     <div class="card__content card__padding">
+                        <div class="card__share">
+                           <a id="share" class="share-toggle share-icon" href="centralPolice.html"></a>
+                        </div>
+                        <article class="card__article">
+                           <h3><a href="centralPolice.html">Central Police</a></h3>
+                           <p>Central police a real-time dashboard to help the policing department in Wellington to respond to calls, reporting the incident and deploying resources.</p>
+                        </article>
+                     </div>
+                  </div>
+               </div>
+            </div>
 			<div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
@@ -149,7 +172,7 @@
                   </div>
                </div>
             </div>
-            <div class="child">
+            <!-- <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
@@ -214,7 +237,7 @@
                      </div>
                   </div>
                </div>
-            </div> -->
+            </div>
             <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
@@ -285,30 +308,6 @@
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
-                        <!-- 2shakes project ------------------------------>
-                        <img src="cp1.png" alt="Central Police dashboard" class="border-tlr-radius">  
-                     </div>
-                     <div class="card__meta">
-                        <a href="centralPolice.html">UI / UX</a>
-                        <time>Late 2016</time>
-                     </div>
-                     <div class="card__content card__padding">
-                        <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="centralPolice.html"></a>
-                        </div>
-                        <article class="card__article">
-                           <h3><a href="centralPolice.html">Central Police</a></h3>
-                           <p>Central police a real-time dashboard to help the policing department in Wellington to respond to calls, reporting the incident and deploying resources.</p>
-                        </article>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="child">
-               <div class="wrapper">
-                  <div class="card radius shadowDepth1">
-                     <div class="card__image border-tlr-radius">
-                        <!-- 2shakes project ------------------------------>
                         <img src="cp1.png" alt="Banking systerm 2 languages" class="border-tlr-radius">  
                      </div>
                      <div class="card__meta">
@@ -326,12 +325,11 @@
                      </div>
                   </div>
                </div>
-            </div>
-			<div class="child">
+            </div> -->
+			<!-- <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
-                        <!-- 2shakes project ------------------------------>
                         <img src="web1.png" alt="creating my website" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
@@ -350,7 +348,7 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div> -->
          </div>
       </div>
       <a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
